# music

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md
.github/: dependabot.yml
.github/workflows/: build-and-dispatch.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  auth.py  cleanup.py  deps.py  devices.py  diagnostics.py  library.py  modes.py  nicknames.py  playlists.py  presets.py  sfx.py  sync.py
backend/app/cli/: __init__.py  __main__.py  create_user.py  init_storage.py  reload_modes.py  set_password.py
backend/app/core/: config.py  db.py  security.py
backend/app/devices/: __init__.py  store.py
backend/app/domain/: known_devices.py  nicknames.py  playback_state.py  playlists.py
backend/app/integrations/: __init__.py
backend/app/models/: __init__.py  auth_session.py  base.py  cleanup_batch.py  cleanup_lookup.py  known_device.py  nickname.py  playback_state.py  playlist.py  track.py  user.py
backend/app/modes/: loader.py
backend/app/presets/: loader.py
backend/app/sync/: __init__.py  advancer.py  connection.py  devices.py  loops.py  protocol.py  router.py  state.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_playlist_category.py  0003_drop_interrupts.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_cleanup.py  test_devices.py  test_health.py  test_library.py  test_modes.py  test_nicknames.py  test_playback_clock.py  test_playlists.py  test_presets.py  test_sfx.py  test_sync.py  test_tag_roundtrip.py
clients/: README.md
clients/headless/: README.md  music-output.service  music_output.py  requirements.txt
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/eslint-rules/: stable-store-selector.js  stable-store-selector.test.js
frontend/public/: compat-mode.js  tv-mode.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Breadcrumb.tsx  CleanupDialog.tsx  ConfirmDialog.tsx  ConfirmDialogHost.tsx  ConflictDialogHost.test.tsx  ConflictDialogHost.tsx  CueEditor.tsx  DeviceIcon.tsx  DeviceNameField.tsx  EmptyState.tsx  EqCurve.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  Fader.tsx  Field.tsx  FolderPickerModal.tsx  FolderTree.test.tsx  FolderTree.tsx  GraphicEqModule.tsx  IconButton.tsx  InputDialogHost.tsx  InterruptTemplatesEditor.tsx  Knob.tsx  MetadataEditor.tsx  Modal.tsx  ModeCycleButton.tsx  MoveDialog.tsx  NoModeEmpty.tsx  OutputToggle.test.tsx  OutputToggle.tsx  SceneEditor.tsx  SectionHeader.tsx  ShortcutSheet.tsx  SoundboardEditor.tsx  SpeakersControl.test.tsx  SpeakersControl.tsx  Switch.tsx  TagInspector.test.tsx  TagInspector.tsx  Toaster.tsx  (+8 more)
frontend/src/core/: api.ts  audioEngine.tsx  auth.test.ts  auth.ts  deviceLabel.ts  deviceVisual.test.ts  deviceVisual.ts  dropTraversal.test.ts  dropTraversal.ts  eq.test.ts  eq.ts  folderTreeModel.test.ts  folderTreeModel.ts  isInteractiveTarget.test.ts  isInteractiveTarget.ts  playbackEngine.test.ts  playbackEngine.ts  playerStore.test.ts  playerStore.ts  slugify.test.ts  slugify.ts  toast.ts  trackDisplay.ts  types.ts  uiStore.ts  uiTransient.ts  useDebouncedValue.test.ts  useDebouncedValue.ts  useFireFlash.ts  useKeyboardShortcuts.ts  useSfxHotkeys.ts  useTickWhile.ts  ws.ts  wsValidate.test.ts  wsValidate.ts
frontend/src/panels/: LibraryPanel.tsx  ModePicker.tsx  OutputPicker.tsx  PlaylistsPanel.tsx  QueuePanel.tsx  UploadManager.tsx
frontend/src/shell/: AppShell.tsx  Header.tsx  LoginModal.tsx  LoginPage.tsx  ModeManagerModal.tsx  NowPlayingBar.tsx  SectionNav.tsx  Tabs.tsx  indexTarget.ts  routeGuards.test.tsx  routeGuards.tsx
frontend/src/styles/: global.css
frontend/src/test/: bootWatchdog.test.ts  compatMode.test.ts  compatModeReconcile.test.ts  setup.ts  tvMode.test.ts
frontend/src/views/: ControlsView.tsx  CuesView.tsx  DiagnosticsView.tsx  InterruptsView.tsx  LibraryView.tsx  MetadataView.tsx  ModesView.tsx  PlayerView.tsx  PlaylistsView.tsx  PresetsView.tsx  SettingsView.tsx  SoundboardsView.tsx
frontend/src/views/controls/: CuesSection.tsx  InterruptSection.tsx  LoopsSection.tsx  PresetsSection.test.tsx  PresetsSection.tsx  ScenesSection.tsx  SoundboardSection.tsx  TransportSection.tsx
modes/default/: manifest.yaml
modes/dnd/: manifest.yaml  theme.css
modes/dnd/soundboards/: default.yaml
presets/: cave.yaml  distant.yaml  muffled.yaml  radio-vintage.yaml  underwater.yaml
