[project]
name = "music-backend"
version = "0.1.0"
description = "Self-hosted music player and DnD session orchestrator — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.138.1",
    # Held below 1.0 on purpose: Starlette 1.x's TestClient drops httpx for
    # httpx2 (flagged as a supply-chain/typosquat risk) — no gain for a
    # test-only transport. Lift once httpx2 is trusted or no longer required.
    "starlette==0.48.0",
    "uvicorn[standard]==0.49.0",
    "sqlalchemy==2.0.51",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "python-multipart==0.0.32",
    "argon2-cffi==25.1.0",
    "pyyaml==6.0.3",
    "mutagen==1.48.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "httpx==0.28.1",
    "ruff==0.15.19",
    "mypy==2.1.0",
]

[project.scripts]
music-cli = "app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# The cleanup engine matches en/em dashes in filenames on purpose — the
# "ambiguous unicode" warning is exactly the point of those patterns.
"app/library/cleanup.py" = ["RUF001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["error"]
