[project]
name = "music-backend"
version = "0.1.0"
description = "Self-hosted music player and DnD session orchestrator — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.139.2",
    # Was held below 1.0 while `httpx2` (the 1.x TestClient transport) looked
    # like a possible typosquat. Hold lifted 2026-07: httpx2 is the official
    # successor — authored by Tom Christie (httpx's creator), hosted under
    # the pydantic org, and starlette's own deprecation message points to it.
    "starlette==1.3.1",
    "uvicorn[standard]==0.51.0",
    "sqlalchemy==2.0.51",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "python-multipart==0.0.32",
    "argon2-cffi==25.1.0",
    "pyyaml==6.0.3",
    "mutagen==1.48.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    # Hangs must fail loudly: asyncio primitives that bind to a dead loop
    # (see StateMachine.reset_for_tests) wedge silently without a timeout.
    "pytest-timeout==2.4.0",
    # TestClient transport for starlette 1.x (successor of classic httpx).
    "httpx2==2.5.0",
    "ruff==0.15.20",
    "mypy==2.2.0",
    "types-pyyaml==6.0.12.20260518",
]

[project.scripts]
music-cli = "app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# The cleanup engine matches en/em dashes in filenames on purpose — the
# "ambiguous unicode" warning is exactly the point of those patterns.
"app/library/cleanup.py" = ["RUF001"]

[tool.mypy]
python_version = "3.11"
files = ["app", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["error"]
# Per-test hang guard. Generous — the slowest tests run a real advancer
# against wall-clock deadlines; a healthy test never gets near this.
timeout = 60
